User-Service and USer-Service

--- a/User-Service/User-Service/src/main/resources/application.properties
+++ b/User-Service/User-Service/src/main/resources/application.properties
@@ -1,20 +1,34 @@
-spring.application.name=user-service
+spring.application.name=USER-SERVICE
 server.port=9091
 
-# Eureka Client Config
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# DB
+spring.datasource.url=jdbc:mysql://localhost:3306/user_db
+spring.datasource.username=root
+spring.datasource.password=Alekhya333@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Eureka Client Configuration - REQUIRED
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
 
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:user_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Enable actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+# Enable info endpoint
+management.endpoint.info.enabled=true
 
-# Hibernate Config
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Custom metadata
+info.app.name=User Service
+info.app.description=Handles user operations and contacts
+info.app.version=1.0.0
+
+# Expose only selected endpoints (optional)
+# management.endpoints.web.exposure.include=health,info
+
