--- a/User Service/User-Service/src/main/resources/application.properties
+++ b/User Service/User-Service/src/main/resources/application.properties
@@ -32,3 +32,10 @@ info.app.version=1.0.0
 # Expose only selected endpoints (optional)
 # management.endpoints.web.exposure.include=health,info
 
+# Resilience4j Configuration
+resilience4j.circuitbreaker.instances.contactService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.contactService.sliding-window-size=5
+resilience4j.circuitbreaker.instances.contactService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.contactService.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.contactService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.contactService.minimum-number-of-calls=5
